--- a/fltk/fluid/fluid.cbp
+++ b/fltk/fluid/fluid.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\fluid" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/fluid" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -27,8 +27,8 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\fluid" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/fluid" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -36,7 +36,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="lua" />
 					<Add library="sqlite3" />
 					<Add library="pthread" />
 					<Add library="dl" />
@@ -44,12 +43,11 @@
 					<Add library="Xft" />
 					<Add library="Xext" />
 					<Add library="Xinerama" />
-					<Add library="squilu" />
 				</Linker>
 			</Target>
 			<Target title="Release win32">
-				<Option output="bin\Release\fluid" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/fluid" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -71,11 +69,11 @@
 			<Add option="-DUSE_SQUILU00=1" />
 			<Add option="-DUSE_STD_STRING2" />
 			<Add option="-DFL_INTERNALS=1" />
-			<Add directory="..\..\fltk" />
-			<Add directory="..\..\lua-5.1.4\src" />
-			<Add directory="..\..\lua-5.1.4\src\ext" />
-			<Add directory="..\..\..\..\SquiLu\include" />
-			<Add directory="..\png" />
+			<Add directory="../../fltk" />
+			<Add directory="../../lua-5.1.4/src" />
+			<Add directory="../../lua-5.1.4/src/ext" />
+			<Add directory="../../../../SquiLu/include" />
+			<Add directory="../png" />
 		</Compiler>
 		<Linker>
 			<Add library="fltk" />
@@ -84,10 +82,10 @@
 			<Add library="fltk_jpeg" />
 			<Add library="fltk_png" />
 			<Add library="fltk_z" />
-			<Add directory="..\lib" />
-			<Add directory="..\..\lua-5.1.4" />
-			<Add directory="..\..\sqlite3-android\.libs" />
-			<Add directory="..\..\..\..\SquiLu\lib" />
+			<Add directory="../lib" />
+			<Add directory="../../lua-5.1.4" />
+			<Add directory="../../sqlite3-android/.libs" />
+			<Add directory="../../../../SquiLu/lib" />
 		</Linker>
 		<Unit filename="CodeEditor.cxx" />
 		<Unit filename="CodeEditor.h" />
@@ -118,8 +116,7 @@
 			<Option compile="1" />
 		</Unit>
 		<Unit filename="luacpp.cxx">
-			<Option target="Debug" />
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="luacpp.h">
 			<Option target="Debug" />
